# rplayer

./: .env.example  .gitignore  Cargo.toml  README.md  新建文本文档 (4).txt
.github/workflows/: build-and-release.yml  deploy-pages.yml
.understand-anything/: .understandignore  meta.json
.understand-anything/tmp/: regenerate-graph.cjs
apps/player_flutter/: README.md  pubspec.yaml
apps/player_flutter/android/: gradle.properties
apps/player_flutter/android/app/: build.gradle.kts
apps/player_flutter/android/app/src/main/: AndroidManifest.xml
apps/player_flutter/lib/: main.dart
apps/player_flutter/lib/app/: player_app.dart  player_shell.dart
apps/player_flutter/lib/core/: utils.dart
apps/player_flutter/lib/models/: media_models.dart
apps/player_flutter/lib/pages/: add_source_page.dart  local_browser_page.dart  media_library_page.dart  profile_page.dart  source_library_page.dart  video_player_page.dart
apps/player_flutter/lib/services/: media_scan_service.dart  rust_core_service.dart  sync_service.dart  tmdb_metadata_service.dart  update_service.dart  webdav_client.dart
apps/player_flutter/lib/store/: app_store.dart
apps/player_flutter/lib/widgets/: common_widgets.dart
apps/player_flutter/test/: widget_test.dart
crates/player_core/: Cargo.toml
crates/player_core/src/: danmu.rs  lib.rs  media.rs  metadata_cache.rs  scanner.rs  tmdb.rs  webdav.rs
docs/: api-contracts.md  architecture.md  roadmap.md  tmdb-media-architecture.md
website/: app.js  index.html  styles.css
(+1 files in other folders)
